--- a/Base/Infrastructure/Infrastructure.csproj
+++ b/Base/Infrastructure/Infrastructure.csproj
@@ -9,5 +9,18 @@
     <Folder Include="Services\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Utilities\" />
+    <Folder Include="Data\Mappings\" />
+    <Folder Include="Data\Repositories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core\Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.1.4" />
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
