added mongo and sample add user POC

--- a/Base/Api/appsettings.Development.json
+++ b/Base/Api/appsettings.Development.json
@@ -7,5 +7,11 @@
       "Microsoft": "Information"
     }
   },
-  "EnableSwagger": "true"
+  "EnableSwagger": "true",
+  "ConnectionString": {
+    "Mongo": "mongodb://localhost:27017"
+  },
+  "System": {
+    "DefaultDatabase": "base"
+  }
 }
