--- a/Base/Jobs/appsettings.json
+++ b/Base/Jobs/appsettings.json
@@ -11,5 +11,11 @@
         "Default": "Warning"
       }
     }
+  },
+  "ConnectionString": {
+    "Mongo": "mongodb://localhost:27017"
+  },
+  "System": {
+    "DefaultDatabase": "base"
   }
 }
