--- a/Base/Core/Core.csproj
+++ b/Base/Core/Core.csproj
@@ -8,4 +8,7 @@
     <Folder Include="Enums\" />
     <Folder Include="Entities\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
+  </ItemGroup>
 </Project>
