--- a/Base/Jobs/appsettings.Development.json
+++ b/Base/Jobs/appsettings.Development.json
@@ -6,5 +6,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionString": {
+    "Mongo": "mongodb://localhost:27017"
+  },
+  "System": {
+    "DefaultDatabase": "base"
   }
 }
