--- a/Base/Api/Api.csproj
+++ b/Base/Api/Api.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Serilog" Version="2.7.1" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Sinks.Literate" Version="3.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.0.100" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,5 +31,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Auth\Auth.csproj" />
   </ItemGroup>
 </Project>
