--- a/Base/Api/appsettings.json
+++ b/Base/Api/appsettings.json
@@ -17,5 +17,9 @@
   },
   "System": {
     "DefaultDatabase" : "base"
+  },
+  "Security": {
+    "SecretKey": "@NcRfTjWnZr4u7x!A%D*G-KaPdSgVkXp2s5v8y/B?E(H+MbQeThWmZq3t6w9z$C&",
+    "EncryptionKey": "bQeThWmZq4t7w!z%C&F)J@NcRfUjXn2r5u8x/A?D(G-KaPdSgVkYp3s6v9y$B&E)"
   }
 }
