--- a/Base/Core/Core.csproj
+++ b/Base/Core/Core.csproj
@@ -7,8 +7,12 @@
   <ItemGroup>
     <Folder Include="Enums\" />
     <Folder Include="Entities\" />
+    <Folder Include="Constants\" />
+    <Folder Include="Contracts\" />
+    <Folder Include="Utilities\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 </Project>
