Added AES encryption to jwt authentication scheme

--- a/Base/Api/appsettings.json
+++ b/Base/Api/appsettings.json
@@ -19,7 +19,7 @@
     "DefaultDatabase" : "base"
   },
   "Security": {
-    "SecretKey": "@NcRfTjWnZr4u7x!A%D*G-KaPdSgVkXp2s5v8y/B?E(H+MbQeThWmZq3t6w9z$C&",
-    "EncryptionKey": "bQeThWmZq4t7w!z%C&F)J@NcRfUjXn2r5u8x/A?D(G-KaPdSgVkYp3s6v9y$B&E)"
+    "SecretKey": "G-KaPdSgVkYp3s6v9y$B&E(H+MbQeThWmZq4t7w!z%C*F-J@NcRfUjXn2r5u8x/A",
+    "EncryptionKey": "dRgUkXp2r5u8x/A?D(G+KbPeShVmYq3t"
   }
 }
