--- a/Base/Jobs/Jobs.csproj
+++ b/Base/Jobs/Jobs.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
@@ -10,7 +10,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Hangfire" Version="1.6.20" />
     <PackageReference Include="Hangfire.Mongo" Version="0.5.11" />
     <PackageReference Include="Hangfire.MemoryStorage" Version="1.5.2" />
